# amebaeath

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  build_jar.bat  compile_and_run.bat  docker-compose.yml  files.txt  netlify.toml  sources.txt  test_output.txt
.github/workflows/: ci.yml  nodejs-test.yml
backend/: CONFIG.md  README-INTEGRATION.md  README.md  debug_sim.js  initial_organisms.json  package-lock.json  package.json  server.js  world.js
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend/__tests__/: api.test.js  autotune.test.js  health.test.js  quadtree-tuning.test.js  redis.test.js  spatial.test.js  world.test.js
backend/bench/: README.md  auto-tune.js  quadtree-bench.js
backend/config/: quadtree.json
backend/db/: schema.sql
backend/go-sim/: Dockerfile  go.mod  main.go
backend/java-sidecar/: Dockerfile  README.md  build.gradle  settings.gradle
backend/rust/: Cargo.toml  Dockerfile  README.md
backend/rust-sim/: Cargo.toml
backend/rust/src/: main.rs
backend/scripts/: start-dev.ps1
clients/javafx-client/: README.md  build.gradle  settings.gradle
clients/tauri-app/: package.json
docs/: AI_RULES.md  BACKEND_GUIDE.md  COMPLETE_SPEC.md  DEPLOY_GUIDE.md  FRONTEND_GUIDE.md  HISTORY_REWRITE.md  TEST_PLAN.md
frontend/: README.md  netlify.toml  next.config.js  package-lock.json  package.json
frontend/components/: P5Canvas.js
frontend/pages/: admin.js  index.js
frontend/styles/: globals.css
src/: IoT.java  Main.java  Renderer.java  Simulation.java  iot.rs  main.rs  simulation.rs
(+13 files in other folders)
